@@ -10,6 +10,7 @@ Authors@R: c(
 Depends: R (>= 3.2.0),
     ape
 Imports:
+    data.table,
     phangorn,
     plyr,
     seqinr,
