@@ -2,6 +2,7 @@
 
 export(DNAbin2index)
 export(aliscore)
+export(blastn)
 export(code.simple.gaps)
 export(collapseUnsupportedEdges)
 export(del.miss)
@@ -54,6 +55,7 @@ importFrom(ape,Ntip)
 importFrom(ape,drop.tip)
 importFrom(ape,is.binary)
 importFrom(ape,multi2di)
+importFrom(data.table,fread)
 importFrom(phangorn,write.phyDat)
 importFrom(plyr,rbind.fill)
 importFrom(utils,head)
